kubernetes/base/apps/self-hosted/ntfy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
